--- a/public/index.html
+++ b/public/index.html
@@ -39,107 +39,107 @@
       <div id="player"></div>
     </div>
 
-    <div class="fixed right-6 top-1/2 -translate-y-1/2 z-50 pointer-events-none">
-      <div class="flex items-center gap-6
-                  bg-base-100/50 backdrop-blur
-                  rounded-2xl shadow-md
-                  px-6 py-3">
-
-        <!-- CPU Power (RADIAL) -->
-        <div class="flex flex-col items-center">
-          <div
-            class="radial-progress text-primary"
-            style="--value:57; --size:3.6rem; --thickness:6px;"
-            role="progressbar">
-            <span id="cpu_power" class="text-sm font-semibold text-base-content/80">--w</span>
+    <div class="fixed inset-0 flex items-center z-50 pointer-events-none">
+      <div class="flex flex-col items-start justify-center gap-6 h-full bg-white/35 rounded-2xl px-8 py-2 scale-150 translate-x-28">
+        <div class="flex items-center gap-8">
+          <!-- CPU Power (RADIAL) -->
+          <div class="flex flex-col items-center">
+            <div
+              id="cpu_util"
+              class="radial-progress text-primary border bg-accent/30"
+              style="--value:0; --size:5.2rem; --thickness:10px;"
+              role="progressbar">
+              <span id="cpu_util_text" class="text-lg font-semibold text-base-content/80">--w</span>
+            </div>
+            <span class="text-sm font-semibold text-base-content/70 mt-1">Load</span>
           </div>
-          <span class="text-xs font-semibold text-base-content/70 mt-1">Power</span>
+
+          <!-- CPU STAT -->
+          <div class="stat">
+            <div class="stat-figure text-primary">
+              <!-- CPU icon -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                class="inline-block size-16 stroke-current">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 2v2M15 2v2M9 20v2M15 20v2M2 9h2M2 15h2M20 9h2M20 15h2M6 6h12v12H6z" />
+              </svg>
+            </div>
+
+            <div class="stat-title text-lg font-semibold">CPU</div>
+
+            <div class="stat-value text-4xl leading-none">
+              <span id="cpu_temp">--</span>
+              <span class="text-lg align-top">°C</span>
+            </div>
+
+            <div id="ram_desc" class="stat-desc text-base font-semibold">
+              RAM --gb/--gb
+            </div>
+
+            <progress
+              id="cpu_progress"
+              class="progress progress-primary w-44 h-3"
+              value="39"
+              max="95">
+            </progress>
+          </div>
         </div>
 
-        <!-- CPU STAT -->
-        <div class="stat">
-          <div class="stat-figure text-primary">
-            <!-- CPU icon -->
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              class="inline-block size-12 stroke-current">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9 2v2M15 2v2M9 20v2M15 20v2M2 9h2M2 15h2M20 9h2M20 15h2M6 6h12v12H6z" />
-            </svg>
+        <div class="flex items-center gap-10">
+          <!-- GPU UTIL (RADIAL) -->
+          <div class="flex flex-col items-center">
+            <div
+              id="gpu_util"
+              class="radial-progress text-primary border bg-secondary/30"
+              style="--value:0; --size:5.2rem; --thickness:10px;"
+              role="progressbar">
+              <span id="gpu_util_text" class="text-lg font-semibold text-base-content/80">--°</span>
+            </div>
+            <span class="text-sm font-semibold text-base-content/70 mt-1">Load</span>
           </div>
 
-          <div class="stat-title font-semibold">CPU</div>
+          <!-- GPU STAT -->
+          <div class="stat">
+            <div class="stat-figure text-primary">
+              <!-- GPU icon -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                class="inline-block size-16 stroke-current">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16v8H4zM6 14v4h4v-4M14 14v4h4v-4M9 10h.01M12 10h.01M15 10h.01" />
+              </svg>
+            </div>
 
-          <div class="stat-value">
-            <span id="cpu_temp">--</span>
-            <span class="text-sm align-top">°C</span>
+            <div class="stat-title text-lg">GPU</div>
+
+            <div class="stat-value text-4xl leading-none">
+              <span id="gpu_hotspot">--</span>
+              <span class="text-lg align-top">°C</span>
+            </div>
+
+            <div id="gpu_desc" class="stat-desc text-base">
+              Edge --°C · VRAM --°C · --W
+            </div>
+
+            <progress
+              id="gpu_progress"
+              class="progress progress-primary w-44 h-3"
+              value="00"
+              max="110">
+            </progress>
           </div>
-
-          <div class="stat-desc font-semibold">
-            RAM 24gb/32gb
-          </div>
-
-          <progress
-            id="cpu_progress"
-            class="progress progress-primary w-32"
-            value="39"
-            max="95">
-          </progress>
         </div>
-
-        <!-- GPU HOTSPOT (RADIAL) -->
-        <div class="flex flex-col items-center">
-          <div
-            id="gpu_hotspot"
-            class="radial-progress text-primary"
-            style="--value:57; --size:3.6rem; --thickness:6px;"
-            role="progressbar">
-            <span id="gpu_hotspot_text" class="text-sm font-semibold text-base-content/80">--°</span>
-          </div>
-          <span class="text-xs font-semibold text-base-content/70 mt-1">Hotspot</span>
-        </div>
-
-        <!-- GPU STAT -->
-        <div class="stat">
-          <div class="stat-figure text-primary">
-            <!-- GPU icon -->
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              class="inline-block size-12 stroke-current">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16v8H4zM6 14v4h4v-4M14 14v4h4v-4M9 10h.01M12 10h.01M15 10h.01" />
-            </svg>
-          </div>
-
-          <div class="stat-title">GPU</div>
-
-          <div class="stat-value">
-            <span id="gpu_edge">--</span>
-            <span class="align-top">°C</span>
-          </div>
-
-          <div id="gpu_desc" class="stat-desc">
-            VRAM --°C · --W
-          </div>
-
-          <progress
-            id="gpu_progress"
-            class="progress progress-primary w-32"
-            value="00"
-            max="110">
-          </progress>
-        </div>
-
       </div>
     </div>
 
@@ -226,24 +226,40 @@
 
         // CPU
         const cpuTemp = Math.round(data.cpu.temp_c)
+        const cpuUtil = Math.round(data.cpu.util_pct)
         document.getElementById("cpu_temp").textContent = cpuTemp
         document.getElementById("cpu_progress").value = cpuTemp
+
+        const cpuRadial = document.getElementById("cpu_util")
+        cpuRadial.style.setProperty("--value", cpuUtil)
+        document.getElementById("cpu_util_text").textContent =
+          `${cpuUtil}%`
+
 
         // GPU
         const gpuEdge = Math.round(data.gpu.edge_c)
         const gpuHotspot = Math.round(data.gpu.hotspot_c)
+        const gpuUtil = Math.round(data.gpu.util_pct)
         const gpuVram = Math.round(data.gpu.vram_c)
         const gpuPower = Math.round(data.gpu.power_w)
 
-        document.getElementById("gpu_edge").textContent = gpuEdge
+        document.getElementById("gpu_hotspot").textContent = gpuHotspot
         document.getElementById("gpu_desc").textContent = `VRAM ${gpuVram}°C · ${gpuPower}W`
-
         document.getElementById("gpu_progress").value = gpuHotspot
 
-        const radial = document.getElementById("gpu_hotspot")
-        radial.style.setProperty("--value", gpuHotspot)
-        document.getElementById("gpu_hotspot_text").textContent =
-          `${gpuHotspot}°`
+
+        const radial = document.getElementById("gpu_util")
+        radial.style.setProperty("--value", gpuUtil)
+        document.getElementById("gpu_util_text").textContent =
+          `${gpuUtil}%`
+
+        // RAM
+        const ramTotal = Math.round(data.ram.total_gb)
+        const ramUsed = Math.round(data.ram.used_gb)
+        const ramAvail = Math.round(data.ram.avail_gb)
+        const ramUsedPct = Math.round(data.ram.used_pct)
+
+        document.getElementById("ram_desc").textContent = `RAM ${ramUsed}gb / ${ramTotal}gb (${ramUsedPct}%)`
       }
 
       async function poll() {
