chore: fix typo in gpu desc

--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,7 @@
 
         document.getElementById("gpu_hotspot").textContent = gpuHotspot
         document.getElementById("vram_temp").textContent = `VRAM ${gpuVramTemp}°C`
-        document.getElementById("gpu_desc").textContent = `VRAM ${gpuVramUsed}/${gpuVramTotal}GB (${gpuVramUsedPct}%`
+        document.getElementById("gpu_desc").textContent = `VRAM ${gpuVramUsed}/${gpuVramTotal}GB (${gpuVramUsedPct}%)`
         document.getElementById("gpu_progress").value = gpuVramUsedPct
         document.getElementById("gpu_power").textContent = `GPU (${gpuPower}W)`
 
